--- a/Mobile App/academia/pubspec.yaml
+++ b/Mobile App/academia/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   table_calendar: ^3.1.0
   floating_bottom_bar: ^0.0.3
   curved_navigation_bar: ^1.0.3
+  animated_bottom_navigation_bar: ^1.3.3
 
 
 
