--- a/Web App/package.json
+++ b/Web App/package.json
@@ -15,7 +15,7 @@
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
     "classnames": "^2.5.1",
-    "next": "14.1.0",
+    "next": "^14.2.1",
     "react": "^18.2.0",
     "react-dom": "^18",
     "react-responsive": "^9.0.2"
