--- a/Client/package.json
+++ b/Client/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.15.10",
-    "@mui/material": "^5.15.10",
+    "@mui/material": "^5.15.15",
     "classnames": "^2.5.1",
+    "iconic-react": "^0.5.0",
     "next": "^14.2.1",
     "react": "^18.2.0",
     "react-dom": "^18",
