--- a/Client/package.json
+++ b/Client/package.json
@@ -17,7 +17,7 @@
     "classnames": "^2.5.1",
     "i18next": "^23.11.5",
     "iconic-react": "^0.5.0",
-    "next": "^14.2.1",
+    "next": "^14.2.4",
     "next-i18next": "^15.3.0",
     "next-intl": "^3.15.0",
     "react": "^18.2.0",
@@ -28,6 +28,7 @@
     "react-scroll": "^1.9.0"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.0"
   }
